@@ -21,5 +21,6 @@
     "1.1.42",
     "1.1.43",
     "1.1.59",
-    "1.1.61"
+    "1.1.61",
+    "1.1.65"
 ]
