@@ -119,6 +119,8 @@ options_subfactory_ingredient_amount_tt=Specify the exact amount of this ingredi
 utilities=Utilities
 utility_title_components=Components
 utility_title_components_tt=Shows the machines and modules needed to construct the current subfactory/floor. Can only incorporate beacons and beacon-modules when their ’Beacon Total’ is set. Rounds the amounts on every line up individually.
+utility_title_blueprints=Blueprints
+utility_title_blueprints_tt=Allows for storage of relevant blueprints alongside the current subfactory. Click the ’+’ button with a blueprint in hand add it.
 utility_title_notes=Notes
 components_needed_tt=__1__\n[font=default-bold]__2__[/font] in inventory / [font=default-bold]__3__[/font] needed\n__CONTROL_STYLE_BEGIN__Click__CONTROL_STYLE_END__ to handcraft this item
 no_components_needed=No __1__ needed
@@ -133,6 +135,9 @@ utility_no_character=Can’t handcraft without associated character
 utility_no_recipes=No recipes can craft this item
 utility_no_demand=Demand for this item already fulfilled
 utility_no_resources=Not enough resources to handcraft
+utility_no_blueprint=No blueprint in hand
+utility_blueprint_not_setup=Blueprint in hand not setup
+utility_blueprint_stored=Blueprint stored!
 
 # Preferences
 preferences=Preferences
@@ -372,6 +377,7 @@ tut_add_recipe_to_end=add recipe
 tut_add_recipe_below=add recipe below
 tut_specify_amount=specify amount
 tut_prioritize=prioritize
+tut_pick_up=pick up
 tut_recipebook=open in Recipe Book
 
 # Effects tooltip
