@@ -163,9 +163,10 @@ function builders.machine(line, parent_flow, metadata)
         local module_set = line.machine.module_set
         if module_set.module_limit > module_set.module_count then
             local module_tooltip = {"", {"fp.add_machine_module"}, "\n", {"fp.shift_to_paste"}}
-            parent_flow.add{type="sprite-button", sprite="utility/add", style="fp_sprite-button_inset_add",
+            local button = parent_flow.add{type="sprite-button", sprite="utility/add", tooltip=module_tooltip,
                 tags={mod="fp", on_gui_click="add_machine_module", floor_id=line.parent.id, line_id=line.id},
-                tooltip=module_tooltip, mouse_button_filter={"left"}, enabled=(not metadata.archive_open)}
+                style="fp_sprite-button_inset_add", mouse_button_filter={"left"}, enabled=(not metadata.archive_open)}
+            button.style.margin = 3
         end
     end
 end
@@ -179,9 +180,10 @@ function builders.beacon(line, parent_flow, metadata)
     local beacon = line.beacon
     if beacon == nil then
         local tooltip = {"", {"fp.add_beacon"}, "\n", {"fp.shift_to_paste"}}
-        parent_flow.add{type="sprite-button", sprite="utility/add", style="fp_sprite-button_inset_add",
+        local button = parent_flow.add{type="sprite-button", sprite="utility/add", tooltip=tooltip,
             tags={mod="fp", on_gui_click="add_line_beacon", floor_id=line.parent.id, line_id=line.id},
-            tooltip=tooltip, mouse_button_filter={"left"}, enabled=(not metadata.archive_open)}
+            style="fp_sprite-button_inset_add", mouse_button_filter={"left"}, enabled=(not metadata.archive_open)}
+        button.style.margin = 3
     else
         local plural_parameter = (beacon.amount == 1) and 1 or 2  -- needed because the amount can be decimal
         local number_line = {"", "\n", beacon.amount, " ", {"fp.pl_beacon", plural_parameter}}
